--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+secret.py
+.idea
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,7 +12,6 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-.idea
 env/
 build/
 develop-eggs/
